--- a/index.html
+++ b/index.html
@@ -214,9 +214,8 @@
                     <div class="col-md-8 border rx box">
                         <div class="text">
                             <h3>Rx</h3>
-                            <p>Napa 1+0+1</p>
-                            <p>Zorate 0+0+1</p>
-                            <p>Esonix 0+1+0</p>
+                            <p>Amoxicillin <span class="border-left border-right m-3 p-2"> 1+0+1 </span>2 weeks</p>
+                            <p>Esonix <span class="border-left border-right m-3 p-2"> 1+1+1 </span> After meals</p>
                         </div>
                     </div>
 <!--Rx section end-->
