--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="container-fluid">
             <div class="row curve">
                 <div class="col text-center">
+                    <a href="#" class="text-right btn download-btn"><i class="fas fa-download"></i></a>
                     <img src="img/logo.png" alt="logo" class="logo">
                 </div>
             </div>
@@ -262,8 +263,8 @@
     </div>
 
     <div class="container-fluid">
-        <div class="row box-header">
-            <div class="col text-center custom-font footer-text">
+        <div class="row box-header footer-text">
+            <div class="col text-center custom-font ">
                 <h4>demo text | location | copyright</h4>
             </div>
         </div>
