--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             <div class="container">
                 <div class="row">
 <!--complaints section start-->
-                    <div class="col-12 box-header">
+                    <div class="col-12 box-header p-2">
                         <p class="font-weight-bold text-white text-center m-0 p-0">Complaints</p>
                     </div>
                     <div class="col-12 border com box">
@@ -209,7 +209,7 @@
 <!--complaints section end-->
                     <div class="row m-3"></div>
 <!--Rx section start-->
-                    <div class="col-12 box-header">
+                    <div class="col-12 box-header p-2">
                         <p class="font-weight-bold text-white text-center m-0 p-0">Medications</p>
                     </div>
                     <div class="col-md-8 border rx box">
@@ -222,7 +222,7 @@
 <!--Rx section end-->
                     <div class="row m-4"></div>
 <!--History section start-->
-                    <div class="col-12 box-header">
+                    <div class="col-12 box-header p-2">
                         <p class="font-weight-bold text-white text-center m-0 p-0">History</p>
                     </div>
                     <div class="col-12 border com box">
@@ -233,7 +233,7 @@
 <!--History section end-->
                     <div class="row m-3"></div>
 <!--Diagnosis start-->
-                    <div class="col-12 box-header">
+                    <div class="col-12 box-header p-2">
                         <p class="font-weight-bold text-white text-center m-0 p-0">Diagnosis</p>
                     </div>
                     <div class="col-md-3 border com box">
@@ -244,7 +244,7 @@
 <!--Diagnosis end-->
                     <div class="row m-3"></div>
 <!--Follow-up start-->
-                    <div class="col-12 box-header">
+                    <div class="col-12 box-header p-2">
                         <p class="font-weight-bold text-white text-center m-0 p-0">Follow-up</p>
                     </div>
                     <div class="col-md-8 border com box">
